# aramis_description

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: aramis_description.launch  aramis_display.launch  aramis_navigation.launch  aramis_navigation.rviz  gazebo.launch  octomap.launch  vrep_description.launch  vrep_display.rviz
robots/: aramis_description.xacro  pioneer.gazebo  pioneer3dx.xacro  pioneer3dx_body.xacro  sensor_camera_usb_pioneer.urdf.xacro  suporte_aramis_description.URDF
